# Space/venus/internal/gin/api/domain/post_record.go
@@ -1,0 +1,13 @@
+package domain
+
+type PostRecordRequest struct {
+	Talon PostTalonRequest
+	User  PostUserRequest
+	Order PostOrderRequest
+}
+
+type PostRecordResponse struct {
+	TalonId PostTalonResponse
+	UserId  PostUserResponse
+	OrderId PostOrderResponse
+}
